--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=treciProjekt
+data.filepath=src/main/resources/readings.csv
+server.port=8080
+
+# H2 Database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=user
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
