--- a/temperature-microservice/application.properties
+++ b/temperature-microservice/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=treciProjekt
-data.filepath=src/main/resources/readings.csv
+//data.filepath=src/main/resources/readings.csv
+data.filepath=classpath:readings.csv
 server.port=8080
 
 # H2 Database
