--- a/temperature-microservice/build.gradle
+++ b/temperature-microservice/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.rassus'
+group = 'com.rassus.temperature'
 version = '0.0.1-SNAPSHOT'
 description = 'Treci projekt iz predmeta Raspodijeljeni sustavi, mikroservisi i kubernetes'
 
