--- a/humidity-microservice/src/main/resources/application.properties
+++ b/humidity-microservice/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=temperature-microservice
+spring.application.name=humidity-microservice
 data.filepath=classpath:readings.csv
-server.port=8080
+server.port=8081
 
 # H2 Database
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:temperature_db
+spring.datasource.url=jdbc:h2:mem:humidity_db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=user
