--- a/aggregator-microservice/build.gradle
+++ b/aggregator-microservice/build.gradle
@@ -1,20 +1,29 @@
 plugins {
-    id 'java'
+	id 'java'
+	id 'org.springframework.boot' version '4.0.1'
+	id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.rassus'
+group = 'com.rassus.humidity'
 version = '0.0.1-SNAPSHOT'
+description = 'Treci projekt iz predmeta Raspodijeljeni sustavi, mikroservisi i kubernetes'
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-test {
-    useJUnitPlatform()
+tasks.named('test') {
+	useJUnitPlatform()
 }
