--- a/humidity-microservice/build.gradle
+++ b/humidity-microservice/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+springBoot {
+	mainClass = 'com.rassus.treciProjekt.microservices.humidity.HumidityApplication'
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
