application.properties changed for kubernetes

--- a/aggregator-microservice/src/main/resources/application.properties
+++ b/aggregator-microservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=aggregation-microservice
 server.port=8082
 temperature.unit=K
-temperature.url=http://localhost:8080/sensor/temp
-humidity.url=http://localhost:8081/sensor/humidity
+temperature.url=http://temperature-service:8080/sensor/temp
+humidity.url=http://humidity-service:8081/sensor/humidity
 
 
