--- a/temperature-microservice/src/main/resources/application.properties
+++ b/temperature-microservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=temperature-microservice
-data.filepath=classpath:readings.csv
+data.filepath=/data/readings.csv
 server.port=8080
 
 # H2 Database
