--- a/humidity-microservice/src/main/resources/application.properties
+++ b/humidity-microservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=humidity-microservice
-data.filepath=classpath:readings.csv
+data.filepath=/data/readings.csv
 server.port=8081
 
 # H2 Database
