kubernetes part implemented, instruction.txt to-do

--- a/humidity-microservice/src/main/resources/application.properties
+++ b/humidity-microservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=humidity-microservice
-data.filepath=/data/readings.csv
+data.filepath=file:/data/readings.csv
 server.port=8081
 
 # H2 Database
