port forwarding and remote db access allowed -part of instructions.txt written

--- a/k8s/config/humidity.yaml
+++ b/k8s/config/humidity.yaml
@@ -45,8 +45,11 @@ kind: Service
 metadata:
   name: humidity-service
 spec:
+  type: NodePort
   selector:
     app: humidity
   ports:
     - port: 8081
       targetPort: 8081
+      nodePort: 30081
+
