--- a/humidity-microservice/src/main/resources/application.properties
+++ b/humidity-microservice/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8081
 # H2 Database
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:humidity_db
+spring.h2.console.settings.web-allow-others=true 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=user
