--- a/k8s/config/temperature.yaml
+++ b/k8s/config/temperature.yaml
@@ -45,8 +45,10 @@ kind: Service
 metadata:
   name: temperature-service
 spec:
+  type: NodePort
   selector:
     app: temperature
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 30080
