--- a/temperature-microservice/src/main/resources/application.properties
+++ b/temperature-microservice/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port=8080
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:temperature_db
 spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.settings.web-allow-others=true
 spring.datasource.username=user
 spring.datasource.password=user
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
